kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ef-old-website
  labels:
    app: ef-old-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ef-old-website
  template:
    metadata:
      labels:
        app: ef-old-website
    spec:
      containers:
      - name: ef-old-website
        image: nginx:stable-alpine3.17
        ports:
        - name: ef-old-website
          containerPort: 80
        resources:
          limits:
            memory: "64Mi"
        volumeMounts:
        - name: ef-old-website
          mountPath: /usr/share/nginx/html
        - name: ef-old-website-nginx-default-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
        - name: ef-old-website
          persistentVolumeClaim:
            claimName: ef-old-website-pvc
        - name: ef-old-website-nginx-default-config
          configMap:
            name: ef-old-website-nginx-default-config
---
apiVersion: v1
kind: Service
metadata:
  name: ef-old-website
  labels:
    app: ef-old-website
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: ef-old-website
